Fixed hover display on mobile

--- a/src/components/add-file/add-file.less
+++ b/src/components/add-file/add-file.less
@@ -1,8 +1,10 @@
 .add-file {
 	transition: all 0.2s ease-in;
 
-	&:hover {
-		background-color: rgb(57, 58, 60);
+	@media (min-width: 769px) {
+		&:hover {
+			background-color: rgb(57, 58, 60);
+		}
 	}
 
 	&.active {
