--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -22,7 +22,6 @@
 	overflow-y: auto;
 
 	&__body {
-		//padding: 10px 0;
 		overflow-y: auto;
 		max-height: 100%;
 		transition: all 0.3s ease-in;
@@ -39,7 +38,7 @@
 		}
 
 		&::-webkit-scrollbar-thumb {
-			background-color: rgb(6, 10, 40);
+			background-color: rgba(19, 27, 50, 0.6);
 			border-radius: 5px;
 		}
 
